--- a/notuber/index.html
+++ b/notuber/index.html
@@ -5,17 +5,20 @@
 		<title>Simple Map</title>
 		<meta name="viewport" content="initial-scale=1.0">
 		<meta charset="utf-8">
-		<script src="https://maps.google.com/maps/api/js?sensor=true"></script>
+		<script src="https://maps.google.com/maps/api/js?sensor=true&libraries=geometry"></script>
 		<link rel="stylesheet" href="style.css"/>
 		<script>
+			var milesInMeter = 0.000621371;
 			var map;
 			var myLat = 0;
 			var myLng = 0;
 			var me;
 			var marker;
+			var username = "0QuKBYCaHf";
 
 			function initMap() {
 				getMyLocation();
+
 				map = new google.maps.Map(document.getElementById('map'), {
 					center: {lat: myLat, lng: myLng},
 					zoom: 16
@@ -40,10 +43,86 @@
 
 				marker = new google.maps.Marker({
 					position: me,
-					icon: "marker.png"
+					icon: "marker.png",
+					title: "Username: " + username +
+					       "\nDistance from nearest: loading..."
 				});
 				marker.setMap(map);
+
+				requestData();
 			}
+
+			function requestData() {
+				request = new XMLHttpRequest();
+				request.open("POST", "https://jordan-marsh.herokuapp.com/rides", true);
+				request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+				request.onreadystatechange = function() {
+					if (request.readyState == 4 && request.status == 200) {
+						var data = JSON.parse(request.responseText);
+						populateMap(data);
+					}
+				};
+				request.send("username=" + username + "&lat=" + myLat + "&lng=" + myLng);
+			}
+
+			function populateMap(data) {
+				// I am a passenger
+				if ("vehicles" in data) {
+					var vehicles = data["vehicles"];
+					vehicles = calcDist(vehicles);
+					var minDist = calcMinDist(vehicles);
+					marker.title = "Username: " + username +
+					               "\nDistance from nearest vehicle: " + minDist;
+					display(vehicles, true);
+				}
+				// I am a vehicle
+				else if ("passengers" in data) {
+					var passengers = data["passengers"];
+					passengers = calcDist(passengers);
+					var minDist = calcMinDist(passengers);
+					marker.title = "Username: " + username +
+					               "\nDistance from nearest passenger: " + minDist;
+					display(passengers, false);
+				}
+			}
+
+			function calcDist(things) {
+				for (var i = 0; i < things.length; i++) {
+					var lat = things[i].lat, lng = things[i].lng;
+					loc = new google.maps.LatLng(lat, lng);
+					var dist = google.maps.geometry.spherical.computeDistanceBetween(me, loc);
+					dist = dist * milesInMeter;
+					things[i].dist = dist;
+				}
+				return things;
+			}
+
+			function calcMinDist(things) {
+				minDist = Infinity;
+				for (var i = 0; i < things.length; i++) {
+					if (things[i].dist < minDist) {
+						minDist = things[i].dist;
+					}
+				}
+				return minDist;
+			}
+
+			function display(things, areVehicles) {
+				for (var i = 0; i < things.length; i++) {
+					var loc = new google.maps.LatLng(things[i].lat, things[i].lng);
+					var icon;
+					if (areVehicles) icon = "car.png";
+					else icon = "person.png";
+					marker = new google.maps.Marker({
+						position: loc,
+						icon: icon,
+						title: "Username: " + things[i].username +
+						       "\nDistance: " + things[i].dist
+					});
+					marker.setMap(map);
+				}
+			}
+
 		</script>
 	</head>
 
