Changed back username

--- a/notuber/index.html
+++ b/notuber/index.html
@@ -13,10 +13,10 @@
 			var myLat = 0;
 			var myLng = 0;
 			var me;
-			var username = "JANET";
+			var username = "0QuKBYCaHf";
 			/* Set to vehicle if I am a passenger,
 			 * or passenger if I am a vehicle */
-			var vehiclesOrPassengers = "passenger";
+			var vehiclesOrPassengers = "vehicle";
 			var minDist = Infinity;
 			var infowindow = new google.maps.InfoWindow ({
 				content: ""
